@@ -1,3 +1,7 @@
+08 May 2003
+Fixed bug where in a certain cases the GCCXMLParser would end up with multiple
+declarations of the same class
+
 22 Apr 2003
 - Now shows a warning when the user tries to export a forward-declared class. Forward-declared classes are ignored by the AllFromHeader construct.
 - Fixed a bug where classes, functions and enums where being exported, even if excluded from a AllFromHeader construct.
